ref-project/src/main/antlr/ReflangParser.java
// Generated from src/main/antlr/Reflang.g4 by ANTLR 4.13.2
import java.util.ArrayList;
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({
  "all",
  "warnings",
  "unchecked",
  "unused",
  "cast",
  "CheckReturnValue",
  "this-escape"
})
public class ReflangParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int T__0 = 1,
      T__1 = 2,
      T__2 = 3,
      T__3 = 4,
      T__4 = 5,
      T__5 = 6,
      T__6 = 7,
      T__7 = 8,
      T__8 = 9,
      T__9 = 10,
      T__10 = 11,
      T__11 = 12,
      T__12 = 13,
      T__13 = 14,
      T__14 = 15,
      T__15 = 16,
      T__16 = 17,
      T__17 = 18,
      T__18 = 19,
      T__19 = 20,
      T__20 = 21,
      T__21 = 22,
      T__22 = 23,
      ID = 24,
      NUMBER = 25,
      TYPE_INT = 26,
      TYPE_STRING = 27,
      TYPE_BOOL = 28,
      STRING = 29,
      TRUE = 30,
      FALSE = 31,
      COMMENT = 32,
      WS = 33,
      FN = 34;
  public static final int RULE_program = 0,
      RULE_statement = 1,
      RULE_vardecl = 2,
      RULE_assign = 3,
      RULE_fndecl = 4,
      RULE_param = 5,
      RULE_params = 6,
      RULE_return = 7,
      RULE_fncall = 8,
      RULE_args = 9,
      RULE_block = 10,
      RULE_while = 11,
      RULE_cond = 12,
      RULE_type = 13,
      RULE_expr = 14,
      RULE_bool_literal = 15;

  private static String[] makeRuleNames() {
    return new String[] {
      "program",
      "statement",
      "vardecl",
      "assign",
      "fndecl",
      "param",
      "params",
      "return",
      "fncall",
      "args",
      "block",
      "while",
      "cond",
      "type",
      "expr",
      "bool_literal"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[] {
      null,
      "';'",
      "':'",
      "'='",
      "'('",
      "')'",
      "'->'",
      "','",
      "'return'",
      "'{'",
      "'}'",
      "'while'",
      "'if'",
      "'else'",
      "'*'",
      "'/'",
      "'+'",
      "'-'",
      "'=='",
      "'!='",
      "'>'",
      "'>='",
      "'<'",
      "'<='",
      null,
      null,
      "'int'",
      "'string'",
      "'bool'",
      null,
      "'true'",
      "'false'",
      null,
      null,
      "'fn'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      "ID",
      "NUMBER",
      "TYPE_INT",
      "TYPE_STRING",
      "TYPE_BOOL",
      "STRING",
      "TRUE",
      "FALSE",
      "COMMENT",
      "WS",
      "FN"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "Reflang.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public ReflangParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ProgramContext extends ParserRuleContext {
    public TerminalNode EOF() {
      return getToken(ReflangParser.EOF, 0);
    }

    public List<StatementContext> statement() {
      return getRuleContexts(StatementContext.class);
    }

    public StatementContext statement(int i) {
      return getRuleContext(StatementContext.class, i);
    }

    public ProgramContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_program;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterProgram(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitProgram(this);
    }
  }

  public final ProgramContext program() throws RecognitionException {
    ProgramContext _localctx = new ProgramContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_program);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(35);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 20988304144L) != 0)) {
          {
            {
              setState(32);
              statement();
            }
          }
          setState(37);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(38);
        match(EOF);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class StatementContext extends ParserRuleContext {
    public VardeclContext vardecl() {
      return getRuleContext(VardeclContext.class, 0);
    }

    public AssignContext assign() {
      return getRuleContext(AssignContext.class, 0);
    }

    public FndeclContext fndecl() {
      return getRuleContext(FndeclContext.class, 0);
    }

    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public BlockContext block() {
      return getRuleContext(BlockContext.class, 0);
    }

    public WhileContext while_() {
      return getRuleContext(WhileContext.class, 0);
    }

    public CondContext cond() {
      return getRuleContext(CondContext.class, 0);
    }

    public ReturnContext return_() {
      return getRuleContext(ReturnContext.class, 0);
    }

    public StatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_statement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitStatement(this);
    }
  }

  public final StatementContext statement() throws RecognitionException {
    StatementContext _localctx = new StatementContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_statement);
    try {
      setState(50);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(40);
            vardecl();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(41);
            assign();
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(42);
            fndecl();
          }
          break;
        case 4:
          enterOuterAlt(_localctx, 4);
          {
            setState(43);
            expr(0);
            setState(44);
            match(T__0);
          }
          break;
        case 5:
          enterOuterAlt(_localctx, 5);
          {
            setState(46);
            block();
          }
          break;
        case 6:
          enterOuterAlt(_localctx, 6);
          {
            setState(47);
            while_();
          }
          break;
        case 7:
          enterOuterAlt(_localctx, 7);
          {
            setState(48);
            cond();
          }
          break;
        case 8:
          enterOuterAlt(_localctx, 8);
          {
            setState(49);
            return_();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class VardeclContext extends ParserRuleContext {
    public Token name;
    public TypeContext t;
    public ExprContext init_expr;

    public TerminalNode ID() {
      return getToken(ReflangParser.ID, 0);
    }

    public TypeContext type() {
      return getRuleContext(TypeContext.class, 0);
    }

    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public VardeclContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_vardecl;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterVardecl(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitVardecl(this);
    }
  }

  public final VardeclContext vardecl() throws RecognitionException {
    VardeclContext _localctx = new VardeclContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_vardecl);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(52);
        ((VardeclContext) _localctx).name = match(ID);
        setState(53);
        match(T__1);
        setState(54);
        ((VardeclContext) _localctx).t = type();
        setState(57);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == T__2) {
          {
            setState(55);
            match(T__2);
            setState(56);
            ((VardeclContext) _localctx).init_expr = expr(0);
          }
        }

        setState(59);
        match(T__0);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class AssignContext extends ParserRuleContext {
    public Token name;
    public ExprContext init_expr;

    public TerminalNode ID() {
      return getToken(ReflangParser.ID, 0);
    }

    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public AssignContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_assign;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterAssign(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitAssign(this);
    }
  }

  public final AssignContext assign() throws RecognitionException {
    AssignContext _localctx = new AssignContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_assign);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(61);
        ((AssignContext) _localctx).name = match(ID);
        setState(62);
        match(T__2);
        setState(63);
        ((AssignContext) _localctx).init_expr = expr(0);
        setState(64);
        match(T__0);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class FndeclContext extends ParserRuleContext {
    public Token name;
    public ParamsContext decl_params;
    public TypeContext ret_type;
    public BlockContext decl_block;

    public TerminalNode FN() {
      return getToken(ReflangParser.FN, 0);
    }

    public TerminalNode ID() {
      return getToken(ReflangParser.ID, 0);
    }

    public TypeContext type() {
      return getRuleContext(TypeContext.class, 0);
    }

    public BlockContext block() {
      return getRuleContext(BlockContext.class, 0);
    }

    public ParamsContext params() {
      return getRuleContext(ParamsContext.class, 0);
    }

    public FndeclContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_fndecl;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterFndecl(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitFndecl(this);
    }
  }

  public final FndeclContext fndecl() throws RecognitionException {
    FndeclContext _localctx = new FndeclContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_fndecl);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(66);
        match(FN);
        setState(67);
        ((FndeclContext) _localctx).name = match(ID);
        setState(68);
        match(T__3);
        setState(70);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == ID) {
          {
            setState(69);
            ((FndeclContext) _localctx).decl_params = params();
          }
        }

        setState(72);
        match(T__4);
        setState(73);
        match(T__5);
        setState(74);
        ((FndeclContext) _localctx).ret_type = type();
        setState(75);
        ((FndeclContext) _localctx).decl_block = block();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ParamContext extends ParserRuleContext {
    public Token name;
    public TypeContext t;

    public TerminalNode ID() {
      return getToken(ReflangParser.ID, 0);
    }

    public TypeContext type() {
      return getRuleContext(TypeContext.class, 0);
    }

    public ParamContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_param;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterParam(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitParam(this);
    }
  }

  public final ParamContext param() throws RecognitionException {
    ParamContext _localctx = new ParamContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_param);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(77);
        ((ParamContext) _localctx).name = match(ID);
        setState(78);
        match(T__1);
        setState(79);
        ((ParamContext) _localctx).t = type();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ParamsContext extends ParserRuleContext {
    public ParamContext first;
    public ParamContext param;
    public List<ParamContext> rest = new ArrayList<ParamContext>();

    public List<ParamContext> param() {
      return getRuleContexts(ParamContext.class);
    }

    public ParamContext param(int i) {
      return getRuleContext(ParamContext.class, i);
    }

    public ParamsContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_params;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterParams(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitParams(this);
    }
  }

  public final ParamsContext params() throws RecognitionException {
    ParamsContext _localctx = new ParamsContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_params);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(81);
        ((ParamsContext) _localctx).first = param();
        setState(86);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__6) {
          {
            {
              setState(82);
              match(T__6);
              setState(83);
              ((ParamsContext) _localctx).param = param();
              ((ParamsContext) _localctx).rest.add(((ParamsContext) _localctx).param);
            }
          }
          setState(88);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ReturnContext extends ParserRuleContext {
    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public ReturnContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_return;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterReturn(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitReturn(this);
    }
  }

  public final ReturnContext return_() throws RecognitionException {
    ReturnContext _localctx = new ReturnContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_return);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(89);
        match(T__7);
        setState(90);
        expr(0);
        setState(91);
        match(T__0);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class FncallContext extends ParserRuleContext {
    public Token name;

    public TerminalNode ID() {
      return getToken(ReflangParser.ID, 0);
    }

    public ArgsContext args() {
      return getRuleContext(ArgsContext.class, 0);
    }

    public FncallContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_fncall;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterFncall(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitFncall(this);
    }
  }

  public final FncallContext fncall() throws RecognitionException {
    FncallContext _localctx = new FncallContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_fncall);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(93);
        ((FncallContext) _localctx).name = match(ID);
        setState(94);
        match(T__3);
        setState(96);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3808428048L) != 0)) {
          {
            setState(95);
            args();
          }
        }

        setState(98);
        match(T__4);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ArgsContext extends ParserRuleContext {
    public ExprContext first;
    public ExprContext expr;
    public List<ExprContext> rest = new ArrayList<ExprContext>();

    public List<ExprContext> expr() {
      return getRuleContexts(ExprContext.class);
    }

    public ExprContext expr(int i) {
      return getRuleContext(ExprContext.class, i);
    }

    public ArgsContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_args;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterArgs(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitArgs(this);
    }
  }

  public final ArgsContext args() throws RecognitionException {
    ArgsContext _localctx = new ArgsContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_args);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(100);
        ((ArgsContext) _localctx).first = expr(0);
        setState(105);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__6) {
          {
            {
              setState(101);
              match(T__6);
              setState(102);
              ((ArgsContext) _localctx).expr = expr(0);
              ((ArgsContext) _localctx).rest.add(((ArgsContext) _localctx).expr);
            }
          }
          setState(107);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class BlockContext extends ParserRuleContext {
    public StatementContext statements;

    public List<StatementContext> statement() {
      return getRuleContexts(StatementContext.class);
    }

    public StatementContext statement(int i) {
      return getRuleContext(StatementContext.class, i);
    }

    public BlockContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_block;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterBlock(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitBlock(this);
    }
  }

  public final BlockContext block() throws RecognitionException {
    BlockContext _localctx = new BlockContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_block);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(108);
        match(T__8);
        setState(112);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 20988304144L) != 0)) {
          {
            {
              setState(109);
              ((BlockContext) _localctx).statements = statement();
            }
          }
          setState(114);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(115);
        match(T__9);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class WhileContext extends ParserRuleContext {
    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public BlockContext block() {
      return getRuleContext(BlockContext.class, 0);
    }

    public WhileContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_while;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterWhile(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitWhile(this);
    }
  }

  public final WhileContext while_() throws RecognitionException {
    WhileContext _localctx = new WhileContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_while);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(117);
        match(T__10);
        setState(118);
        match(T__3);
        setState(119);
        expr(0);
        setState(120);
        match(T__4);
        setState(121);
        block();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class CondContext extends ParserRuleContext {
    public ExprContext cond_expr;
    public BlockContext if_block;
    public BlockContext else_block;

    public ExprContext expr() {
      return getRuleContext(ExprContext.class, 0);
    }

    public List<BlockContext> block() {
      return getRuleContexts(BlockContext.class);
    }

    public BlockContext block(int i) {
      return getRuleContext(BlockContext.class, i);
    }

    public CondContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_cond;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterCond(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitCond(this);
    }
  }

  public final CondContext cond() throws RecognitionException {
    CondContext _localctx = new CondContext(_ctx, getState());
    enterRule(_localctx, 24, RULE_cond);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(123);
        match(T__11);
        setState(124);
        match(T__3);
        setState(125);
        ((CondContext) _localctx).cond_expr = expr(0);
        setState(126);
        match(T__4);
        setState(127);
        ((CondContext) _localctx).if_block = block();
        setState(130);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == T__12) {
          {
            setState(128);
            match(T__12);
            setState(129);
            ((CondContext) _localctx).else_block = block();
          }
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class TypeContext extends ParserRuleContext {
    public TypeContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_type;
    }

    public TypeContext() {}

    public void copyFrom(TypeContext ctx) {
      super.copyFrom(ctx);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class BoolContext extends TypeContext {
    public TerminalNode TYPE_BOOL() {
      return getToken(ReflangParser.TYPE_BOOL, 0);
    }

    public BoolContext(TypeContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterBool(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitBool(this);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class StringContext extends TypeContext {
    public TerminalNode TYPE_STRING() {
      return getToken(ReflangParser.TYPE_STRING, 0);
    }

    public StringContext(TypeContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterString(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitString(this);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class IntContext extends TypeContext {
    public TerminalNode TYPE_INT() {
      return getToken(ReflangParser.TYPE_INT, 0);
    }

    public IntContext(TypeContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterInt(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitInt(this);
    }
  }

  public final TypeContext type() throws RecognitionException {
    TypeContext _localctx = new TypeContext(_ctx, getState());
    enterRule(_localctx, 26, RULE_type);
    try {
      setState(135);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case TYPE_INT:
          _localctx = new IntContext(_localctx);
          enterOuterAlt(_localctx, 1);
          {
            setState(132);
            match(TYPE_INT);
          }
          break;
        case TYPE_STRING:
          _localctx = new StringContext(_localctx);
          enterOuterAlt(_localctx, 2);
          {
            setState(133);
            match(TYPE_STRING);
          }
          break;
        case TYPE_BOOL:
          _localctx = new BoolContext(_localctx);
          enterOuterAlt(_localctx, 3);
          {
            setState(134);
            match(TYPE_BOOL);
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ExprContext extends ParserRuleContext {
    public ExprContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_expr;
    }

    public ExprContext() {}

    public void copyFrom(ExprContext ctx) {
      super.copyFrom(ctx);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class AddContext extends ExprContext {
    public ExprContext lhs;
    public ExprContext rhs;

    public List<ExprContext> expr() {
      return getRuleContexts(ExprContext.class);
    }

    public ExprContext expr(int i) {
      return getRuleContext(ExprContext.class, i);
    }

    public AddContext(ExprContext ctx) {
      copyFrom(ctx);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).enterAdd(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ReflangListener) ((ReflangListener) listener).exitAdd(this);
    }
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SubContext extends ExprContext {
    public ExprContext lhs;
    public ExprContext rhs;

    public List<ExprContext> expr() {
      return getRuleContexts(ExprContext.class);
    }

    public ExprContext expr(int i) {
      return getRuleContext(ExprContext.class, i);
    }
